Fix for sidebar jumping

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ img {
 #sidebar {
 	/*float: left;*/
 	/*display: table-cell;*/
-	max-width: 190px;
+	min-width: 120px;
+	width: 120px;
 	margin-right: 30px;
 }
 
@@ -61,7 +62,7 @@ iframe {
 	padding-bottom: 5px;
 }
 
-@media (max-height: 930px) {
+/*@media (max-height: 930px) {
 	#sidebar {
 		max-width: 140px;
 		width: 140px;
@@ -111,7 +112,7 @@ iframe {
 		max-width: 25%;
 		max-height: 25%;
 	}
-}
+}*/
 
 .blue {
 	background-color: #0065B3;
